--- a/.github/workflows/codeQL.yml
+++ b/.github/workflows/codeQL.yml
@@ -7,6 +7,10 @@ on:
 jobs:
   CodeQL-Build:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        language: ['python']
 
     permissions:
       # required for all workflows
